# tracer

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE.mit  dev_dairy.md  env_vars.nu  rust-toolchain.toml  sqlx-data.json  tracer.yml
api-structs/: Cargo.toml
api-structs/src/: exporter.rs  instance.rs  lib.rs  sse.rs  time_conversion.rs  ui.rs  websocket.rs
api-structs/src/exporter/: status.rs  trace_exporting.rs
api-structs/src/instance/: connect.rs  update.rs
api-structs/src/ui/: live_services.rs  orphan_events.rs  search_grid.rs  service.rs  service_health.rs  trace.rs  trace_view.rs
api-structs/src/ui/service/: alerts.rs
api-structs/src/ui/trace/: chunk.rs  grid.rs
api-structs/src/websocket/: axum_adapter.rs  client_adapter.rs
backtraced_error/: Cargo.toml
backtraced_error/src/: lib.rs
connection/: Cargo.toml
connection/src/: lib.rs
tracer-backend/: Cargo.toml
tracer-backend/.sqlx/: query-07fe03f05a7b0a67099ca067d7e5fab44b4a43c4bd0edf7e85110bb7815f5431.json  query-1053fa5dcd5e8d1d1ea1c813e5dd43abf4de5c5ffd0a272a730e53307d11c9b0.json  query-154c6199a784077b46f0bbaa117fdfb0f7eaa17b884b71b2ab7b355230adf578.json  query-168596e4c927b670b9c43ffa300b0ef7e0d5f497f111625e63bc4186ebdd0f2c.json  query-1b1c203e12ec52ff09df9ed64efca5ca6c1be08dabcb48699cc1b6a25f610209.json  query-1de1c2bb127d10480010889a06e35ed52e38142dd8aad7cd0b619a9789bd065a.json  query-1e7de39b305157611ac846fcb13deb7b47c52ea1c2eccfabd3a4b3dd45693b32.json  query-23270bf09bb73d61e8e9075c0d14dcd514e085f8009be9c3de52c3eed9d78258.json  query-24dfa7c624cd9075535bc96b7f2aaea28cf082ac1ea398e5ff8413394a6243f1.json  query-2b1a3d588df5cc9cb499b34a2d0b039143ad548a35517425ba50996603047214.json  query-2b9e60b9ca115a7438f59a30037a11745f4d94bfa2d8b3bbe649c2de8988a606.json  query-2c782f1d4997dabb85f766eade4b759aca5d1e179952b2eb5b19a83dc9aca143.json  query-2f6d3caf4d86bebfcee877fc91ed3941dc9a26d117657f1adc49e9f6aeb88037.json  query-3253dfff7349327971055874b4ae9bf706c2e5683c4c94f300b825a57d0f2161.json  query-3577cd2cd7341632d25362578aee88a988153f1f380d137e42c83c5de7c736d1.json  query-3b7ed851f4c7e0f9a8448d8eaf1704aa4bd1e8d4a8e8c639fcaa9761b325de6b.json  query-43e2c8487c2c3f1706913d285f68ba779205d91fa6cd1b904c83d001e1cdd385.json  query-45950279716263a645211bc5aed7d11bfd0b5b594a62277eef16030a15c52d03.json  query-513bf618dad6902394f990afc8ef1d76df3d1ddaaf8ce4b7385183846ad23117.json  query-518226ebdf74aa8abfb754099b92ea2e93ce3f34b0344c7993effde871c57d9f.json  query-57d8cd7d85ffce227b64be252d2fb43b447810bc623cab96709ad9401169cf7e.json  query-6138f2b9a1c78ba94928819e32da0d7fb99daf92b3cdd0d9a75b558dfffbd933.json  query-68c66c497a6be7c6f51c9cc794c15ce498330a39b39e52d8f5fd98f5206b976c.json  query-6ba56fd14969603d47529a7f694116cabce202c870eaa205ea6725cea472eac3.json  query-6ced41b877a49eb6fa9f40a76159d0dc1d9e24e8d2c1903ed39c81e97726524f.json  query-6d301acfd516c03dbe6867e612ec9db054e5734f8659506dfb531562ef9b4ca9.json  query-73941320bd987cd1542c65f301aab947b9230a547a2b5d8ec76f1132129547b8.json  query-7a8eb38cf85e448b4a0a30a1292e9259f97aac56d9bbce53f44b580578fd8bee.json  query-7be486e64c688cb1ccb0106d531a5b8d4bc9d9e682b4f697282f74c044c6837c.json  query-7c1387e490d705385c1a1e4a18bf40ddc2e3945bd0038146240866771a29c185.json  query-7faf69c37e070c3e8fae5ced71851c9715afce9b2003fe1a152116a37a0b81f9.json  query-8154753f822c363b9fbd5f471c9dd8be0c72fdbd2dffd1306f680cbbcec97f5f.json  query-87701661e2cf0345bea5f8429576e81d41d8db36e9cf8a50c4bd224608451ccd.json  query-8bff10dbb1273d9248f4f3cc7b7a965b787fb36de68658256c81aff6d9341ac4.json  query-8c3b362806586f91bd896bcd94a2f8f0551d898ce8cb5912f5bb5eb5cd44ca31.json  query-8ca6b3555803e3604bab604d84a0cf1d4aeeb73ac8b4f93d540840d6e8e32d4b.json  query-8e6c9b8086228e86e8fb75b0fd6758b0d651d66be3a5d4bda6696ef76b6da52e.json  query-8f8d53a7cb509ca411704801826ff390389be39699d46a4ee8597d2105b2717d.json  query-90b3e6d9279fcecfb435a416ee987f54bafe3192ecd630363a37cd8432ad3a50.json  query-938ecd052fc2c19f4dff6840e4154859cf47e08a75d6e8b83fc392f468b34155.json  (+37 more)
tracer-backend/src/: api.rs  background_tasks.rs  database.rs  main.rs  notification_worthy_events.rs  otel_trace_processing.rs
tracer-backend/src/api/: database.rs  handlers.rs  new.rs  state.rs
tracer-backend/src/api/database/: alerts.rs
tracer-backend/src/api/handlers/: ui.rs
tracer-backend/src/api/handlers/instance/: connect.rs  update.rs
tracer-backend/src/api/handlers/ui/: orphan_event.rs  service.rs  trace.rs
tracer-backend/src/background_tasks/: alerts.rs  clean_up.rs
tracer-backend/src/background_tasks/alerts/: checker.rs  senders.rs
tracer-backend/src/background_tasks/alerts/checker/: checks.rs
tracer-backend/src/background_tasks/alerts/senders/: slack.rs  telegram.rs
tracer-backend/src/background_tasks/clean_up/: database_old_traces_and_logs.rs  instance_runtime_data.rs  old_slack_notification.rs
tracer-backend/src/database/: service_initialization.rs
tracer-backend/src/otel_trace_processing/: span_processing.rs  trace_fragment.rs
tracer-backend/src/proto_generated/: mod.rs  opentelemetry.proto.collector.trace.v1.rs  opentelemetry.proto.common.v1.rs  opentelemetry.proto.trace.v1.rs
tracer-tester/: Cargo.toml
tracer-tester/src/: database_creation.rs  main.rs  no_oom_if_server_down.rs  well_behaved.rs
tracer-ui/: Cargo.toml  index.html  styles.scss  trunk.toml
tracer-ui/src/: datetime.rs  details.rs  grid.rs  logs.rs  main.rs  orphan_events.rs  services.rs  summary.rs  trace.rs
tracer-ui/src/services/: active_traces_table.rs  alerts.rs  graph_creation.rs  graphs.rs  service_snapshot.rs
tracer-ui/src/services/graphs/: service_graphs.rs  trace_details_graphs.rs
tracer-ui/src/services/graphs/service_graphs/: budget_usage.rs  (+5 more)
tracing-config-helper/: Cargo.toml
tracing-config-helper/src/: export.rs  lib.rs  old.rs  print_debugging.rs  sampling.rs  server_connection.rs  storage.rs  subscriber.rs  test.rs
tracing-config-helper/src/server_connection/: instance_update_sender.rs  request_compression.rs  server_sent_events.rs
tracing-config-helper/src/subscriber/: attribute_visitor.rs  sampler.rs  state.rs
(+13 files in other folders)
