[workspace]
resolver="2"
members = [
    "tracer-backend",
    "tracer-ui",
    "api-structs",
    "tracing-config-helper",
    "connection"
]


[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.3.0"
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.16", features=['env-filter', 'json']}
thiserror = "1.0"
chrono = {version = "0.4", features = ['serde']}