[workspace]
resolver = "2"
members = [
    "tracer-backend",
    "tracer-ui",
    "api-structs",
    "tracing-config-helper",
    "tracer-tester",
    "backtraced_error",
]


[workspace.dependencies]
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.3.0"
tracing = "0.1.37"
sys-info = "0.9.1"
tracing-subscriber = { version = "0.3.16", features = ['env-filter', 'json'] }
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4.31", features = ['serde'] }
serde_json = "1"
reqwest = { version = "0.12", features = ['brotli'] }
brotli = "3"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono", "json"] }
tokio = { version = "1", features = ["macros", "sync"] }
dotenvy = "0.15.7"