[package]
name = "api-structs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
futures = "0.3.28"
uuid = "1.3.4"
serde_json = "1.0.97"
tokio = { version = "1", features = ["full"]}
axum = {version = "0.6.2", features=['query', 'macros', 'ws']}
tokio-tungstenite = {git="https://github.com/snapview/tokio-tungstenite.git"}
