[package]
name = "backtraced_error"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
sqlx.workspace = true
serde_json.workspace = true
reqwest.workspace = true
