[package]
name = "connection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quinn = "0.10.1"
rcgen = "0.11.1"
abort-on-drop = "0.2.2"
serde_json = "1.0"
futures-concurrency = "7.3.0"
serde.workspace = true
thiserror.workspace = true
rustls = "0.21.5"
tokio = { version = "1", features = ["rt"]}
futures = "0.3.28"
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait = "0.1"