[package]
name = "tracer-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
deepsize = {version = "0.2.0", features=['derive']}
axum = {version = "0.6.2", features=['query', 'macros', 'ws']}
prost = "0.11"
tower-http = {version="0.4.0", features=['cors', 'fs']}
tonic = "0.9.1"
base16 = "0.2.1"
chrono = {version = "0.4.23", features = ['serde']}
reqwest = "0.11.14"
serde_json = "1.0.94"
tokio = { version = "1", features = ["full"]}
clap = { version = "4.2.4", features = ["derive", "env", "wrap_help"] }
dotenv = "0.15.0"
sqlx = {version = "0.6.2", features=["runtime-tokio-native-tls", "postgres", "offline", "chrono", "json"]}
futures = "0.3.28"
brotli = "3.3.4"
serde.workspace = true
parking_lot = "0.12.1"
uuid = {version="1.3.4"}
tokio-util = "0.7.8"
tracing.workspace = true
tracing-subscriber.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
tracing-opentelemetry.workspace = true
api-structs = {path="../api-structs"}
futures-util = "0.3.28"
futures-concurrency = "7.3.0"
tokio-stream = "0.1.14"
[dependencies.tracing-config-helper]
version = "0.1.0"
path = "../tracing-config-helper"

[dev-dependencies]
insta = "1.29.0"
tonic-build = {version= "0.9.1", features = ["prost"]}
