[package]
name = "tracer-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
deepsize = {version = "0.2", features=['derive']}
axum = {version = "0.6", features=['query', 'macros']}
tower-http = {version="0.4", features=['cors', 'fs']}

reqwest = "0.11"
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros"]}
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
dotenv = "0.15"
sqlx = {version = "0.7", features=["runtime-tokio-native-tls", "postgres", "chrono", "json"]}
futures = "0.3"
thiserror = "1.0.50"
anyhow = "1.0.75"
brotli.workspace=true
serde.workspace = true
parking_lot = "0.12"
uuid = {version="1"}
tokio-util = "0.7"
indexmap = "2.1.0"
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true

api-structs = {path="../api-structs"}
tokio-stream = "0.1"
[dependencies.tracing-config-helper]
version = "0.1.0"
path = "../tracing-config-helper"

[dev-dependencies]
insta = "1"
