[package]
name = "tracer-tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt", "macros"]}
thiserror = "1.0.50"
tracing = "0.1.40"
rand.workspace = true
[dependencies.tracing-config-helper]
version = "0.1.0"
path = "../tracing-config-helper"