[package]
name = "tracer-tester"
version = "0.1.0"
edition = "2021"

default-run = "tracer-tester"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "tracer-tester"
path = "src/main.rs"

[[bin]]
name = "no-oom-if-server-down"
path = "src/no_oom_if_server_down.rs"

[[bin]]
name = "well_behaved"
path = "src/well_behaved.rs"



[dependencies]
tokio.workspace = true
sys-info.workspace = true
thiserror.workspace = true
tracing.workspace = true
rand.workspace = true
dotenvy.workspace = true
[dependencies.tracing-config-helper]
version = "0.1.0"
path = "../tracing-config-helper"