[package]
name = "tracing-config-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
tracing-opentelemetry.workspace = true
serde.workspace = true
tower-http = {version="0.4.0", features=['cors']}
reqwest = {version="0.11.18", features=['json']}
async-trait = "0.1.68"
api-structs = {path="../api-structs"}
chrono = {version = "0.4.23", features = ['serde']}
parking_lot = "0.12.1"
axum = "0.6.18"
tokio = "1.28.2"
uuid = {version="1.4.0", features=['v4']}
tokio-tungstenite = {git="https://github.com/snapview/tokio-tungstenite.git"}
futures-util = "0.3.28"
futures-concurrency = "7.3.0"
tokio-stream = "0.1.14"
futures = "0.3.28"
serde_json = "1.0.97"
memory-stats = "1.0.0"
[build-dependencies]
openapi-struct-gen = { version = "*", features = ["build"] }
axum = {version = "0.6.2", features=['query', 'macros', 'ws']}

