[package]
name = "tracing-config-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
tracing-opentelemetry.workspace = true
serde.workspace = true
tower-http = {version="0.4", features=['cors']}
reqwest = {version="0.11", features=['json']}
async-trait = "0.1"
api-structs = {path="../api-structs"}
chrono = {version = "0.4", features = ['serde']}
parking_lot = "0.12"
axum = "0.6"
tokio = "1"
uuid = {version="1", features=['v4']}
futures-util = "0.3"
futures-concurrency = "7"
thiserror = "1"
reqwest-eventsource = "0.5"
futures = "0.3"
serde_json = "1"
memory-stats = "1"
rand = "0.8.5"
[build-dependencies]
openapi-struct-gen = { version = "*", features = ["build"] }
axum = {version = "0.6.2", features=['query', 'macros', 'ws']}

