[package]
name = "tracing-config-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
pprof = { version = "0.13", features = ["flamegraph", "frame-pointer", "prost-codec"] }
reqwest.workspace = true
async-trait = "0.1"
api-structs = {path="../api-structs"}
brotli.workspace=true
chrono = {version = "0.4", features = ['serde']}
parking_lot = "0.12"
tokio = "1"
uuid = {version="1", features=['v4']}
futures-util = "0.3"
thiserror = "1"
reqwest-eventsource = "0.5"
futures = "0.3"
serde_json = "1"
rand.workspace = true

